--- a/blog.html
+++ b/blog.html
@@ -11,10 +11,9 @@
 <body>
     <header>
         <h1>Blog</h1>
-        <label for="">
-            <input type="search" placeholder="Search...">
-            <i class="fas fa-search"></i>
-        </label>
+		        <ul>
+                    <li><a href="index.html">Home</a></li>
+                </ul>
     </header>
     <div class="banner"></div>
     <main>
@@ -25,7 +24,7 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="index.html">메인화면으로</a></li>
+                    <li><a href="blog.html">MBTI 강아지 테스트 소개</a></li>
                     <li><a href="blog/1.html">SULLEN 홍보</a></li>
                     <li><a href="blog/2.html">MBTI에 관하여</a></li>
                     <li><a href="blog/3.html">MBTI와 강아지 성격</a></li>
