--- a/study.html
+++ b/study.html
@@ -8,15 +8,32 @@
     <script src="https://kit.fontawesome.com/3c26041fb8.js" crossorigin="anonymous"></script>
 	<script data-ad-client="ca-pub-2929681409679243" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
+<body><!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>blog</title>
+    <link rel="stylesheet" href="css/screens/blog.css">
+    <script src="https://kit.fontawesome.com/3c26041fb8.js" crossorigin="anonymous"></script>
+<script data-ad-client="ca-pub-2929681409679243" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</head>
 <body>
     <header>
-        <h1>DayDay Study</h1>
+        <h1>Study</h1>
+		        <ul>
+                    <li><a href="index.html">Home</a></li>
+                </ul>
     </header>
     <div class="banner"></div>
     <main>
-
+        <aside>
+            <div class="profile">
+                <img class="profile__Img" src="img/size.png" alt=""><br>
+                <span>웹사이트 개발<br>Study</span>
+            </div>
+        </aside>
         <section>
-            <h2>Study 모집</h2>
             <p><br>
                 저희는 웹사이트와 어플 등을 만들어 수익 창출 및 코딩 공부, 웹사이트 기획 등 다양한 활동을 하는 스터디입니다. 현재 같이 웹사이트, 어플을 만들 스터디원을 모집하고 있습니다. <br>
             </p><br>
@@ -31,8 +48,15 @@
 -하고싶은말<br><br>				
 지원양식에 맞춰서 작성 후 fbeogmlsla@gmail.com 으로 메일 보내주세요~ 메일검토 후 답장 보내드리겠습니다.<br><br><br><br><br>
         </p>
-        </section>
-    </main>
 
+        </section>
+        <a href="#" id="back-to-top">TOP</a>
+    </main>
+    <footer>
+        <span>개발자 연락처<br>
+            DayDay 개복치 0q | fbeogmlsla@gmail.com
+        </span>
+    </footer>
+    <script src="topscroll.js"></script>
 </body>
-</html> 
+</html>
