--- a/index.html
+++ b/index.html
@@ -35,5 +35,10 @@
 			
         </div>
     </section>
+	<ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-OFl6Xl4nqdNlSkJ4" 
+ data-ad-width   = "300" 
+ data-ad-height  = "250"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 </body>
 </html>
