--- a/index.html
+++ b/index.html
@@ -1,44 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
             name="keywords"
             content="강아지 MBTI, dog mbti, mbti dog, mbti 강아지, puppy mbti, mbti로 보는 나의 강아지 유형, 비글, 비숑, 불독, 셰퍼드, 페키니즈, 리트리버, 티베탄 테리어, 웰시코기, 강아지 성격, mbti 테스트, 강아지 mbti 테스트"
         />
-    <title>MBTI로 보는 나의 강아지 유형</title>
-    <link rel="stylesheet" href="css/styles.css">
-	<script data-ad-client="ca-pub-2929681409679243" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-</head>
-<body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="study.html">Study</a></li>
-            <li><a href="foryou.html">For you</a></li>
-        </ul>
-    </nav>
-    <main class="index-main">
-        <span>MBTI로 보는</span>
-        <h1>나의 강아지 유형</h1>
-        <img class="index-main__dog-logo" src="./img/size.png" alt="">
-        <form action="survey.html">
-            <button class="index-main__startBtn" type="text">시작하기</button>
-        </form>
-    </main>
-	
-	    <section class="youtube pb-3" id="yotube-mid-link">
-        <div class="container mt-3 youtube-cover d-flex flex-row-reverse align-items-center">
-            <h1><center><a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" class="youtube-link">제작도움 : 조코딩 유튜브 채널</a><img src="img/youtube-copy.jpg" alt="youtube-icon" class="youtube-icon"></center></h1>
-			
-        </div>
-    </section>
-	<ins class="kakao_ad_area" style="display:none;" 
- data-ad-unit    = "DAN-OFl6Xl4nqdNlSkJ4" 
- data-ad-width   = "300" 
- data-ad-height  = "250"></ins> 
-<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-</body>
+        <title>MBTI로 보는 나의 강아지 유형</title>
+        <link rel="stylesheet" href="css/styles.css" />
+        <script
+            data-ad-client="ca-pub-2929681409679243"
+            async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+        ></script>
+    </head>
+    <body>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="study.html">Study</a></li>
+                <li><a href="foryou.html">For you</a></li>
+            </ul>
+        </nav>
+        <main class="index-main">
+            <span>MBTI로 보는</span>
+            <h1>나의 강아지 유형</h1>
+            <img class="index-main__dog-logo" src="./img/size.png" alt="" />
+            <form action="survey.html">
+                <button class="index-main__startBtn" type="text">시작하기</button>
+            </form>
+            <br /><br />
+            <ins
+                class="kakao_ad_area"
+                style="display: none;"
+                data-ad-unit="DAN-OFl6Xl4nqdNlSkJ4"
+                data-ad-width="300"
+                data-ad-height="250"
+            ></ins>
+            <script
+                type="text/javascript"
+                src="//t1.daumcdn.net/kas/static/ba.min.js"
+                async
+            ></script>
+
+            <ins
+                class="kakao_ad_area"
+                style="display: none;"
+                data-ad-unit="DAN-Q6q4gQBJ5yaSypcv"
+                data-ad-width="250"
+                data-ad-height="250"
+            ></ins>
+            <script
+                type="text/javascript"
+                src="//t1.daumcdn.net/kas/static/ba.min.js"
+                async
+            ></script>
+        </main>
+
+        <section class="youtube pb-3" id="yotube-mid-link">
+            <div class="container mt-3 youtube-cover d-flex flex-row-reverse align-items-center">
+                <h1>
+                    <center>
+                        <a
+                            href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg"
+                            class="youtube-link"
+                            >제작도움 : 조코딩 유튜브 채널</a
+                        ><img src="img/youtube-copy.jpg" alt="youtube-icon" class="youtube-icon" />
+                    </center>
+                </h1>
+            </div>
+        </section>
+    </body>
 </html>
