--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
         />
         <title>MBTI로 보는 나의 강아지 유형</title>
         <link rel="stylesheet" href="css/styles.css" />
-        <script
-            data-ad-client="ca-pub-2929681409679243"
-            async
-            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
-        ></script>
+
     </head>
     <body>
+			<ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-HjYQ1HQlOTD8UnZc" 
+ data-ad-width   = "320" 
+ data-ad-height  = "50"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+		
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
