--- a/result.html
+++ b/result.html
@@ -3,6 +3,13 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		
+		<ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-HjYQ1HQlOTD8UnZc" 
+ data-ad-width   = "320" 
+ data-ad-height  = "50"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+		
         <title>MBTI로 보는 나의 강아지 유형</title>
         <link rel="stylesheet" href="css/styles.css" />
         <script src="https://kit.fontawesome.com/3c26041fb8.js" crossorigin="anonymous"></script>
@@ -19,6 +26,14 @@
     </head>
 
     <body>
+		        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="study.html">Study</a></li>
+                <li><a href="foryou.html">For you</a></li>
+            </ul>
+        </nav>
         <header>
             <h2>MBTI로 보는 나의 강아지 유형</h2>
             <span></span>
@@ -82,11 +97,13 @@
                         <span id="dog2">비글</span>
                     </div>
                     <div class="notRecommendedDogs__img">
-                        <img
+
+						<img
                             id="img2"
                             src="https://github.com/beeee2/dog-mbti/blob/main/img/terrier.png?raw=true"
                             alt=""
                         />
+
                     </div>
                 </div>
             </div>
