--- a/study.html
+++ b/study.html
@@ -38,7 +38,7 @@
                 저희는 웹사이트와 어플 등을 만들어 수익 창출 및 코딩 공부, 웹사이트 기획 등 다양한 활동을 하는 스터디입니다. 현재 같이 웹사이트, 어플을 만들 스터디원을 모집하고 있습니다. <br>
             </p><br>
             <p><br>
-            웹 디자인, HTML, CSS, JAVA Script, 웹사이트 기획 등 관심 있으신분들은 많은 지원 부탁드립니다.<br><br><br>
+            웹 디자인, HTML, CSS, JAVA Script, PHP, 웹사이트 기획 등 관심 있으신분들은 많은 지원 부탁드립니다.<br><br><br>
 ●지원양식<br><br>
 -이름<br><br>
 -나이<br><br>
@@ -46,7 +46,7 @@
 -사는곳<br><br>
 -메일주소 또는 전화번호<br><br>
 -하고싶은말<br><br>				
-지원양식에 맞춰서 작성 후 fbeogmlsla@gmail.com 으로 메일 보내주세요~ 메일검토 후 답장 보내드리겠습니다.<br><br><br><br><br>
+지원양식에 맞춰서 작성 후 fbeogmlsla@gmail.com 으로 메일 보내주세요. 메일검토 후 답장 보내드리겠습니다.<br><br><br><br><br>
         </p>
 
         </section>
