--- a/result.html
+++ b/result.html
@@ -470,6 +470,11 @@
             }, 3000);
         </script>
         <footer id="footer">
+			웹사이트 개발 스터디원을 모집하고 있습니다. <br />자세한 사항은
+			<a
+                            href="study.html"
+                            class="youtube-link"
+                            >여기</a>를 클릭해주세요.<br /><br />
             <h3>개발자 연락처</h3>
             <p>
                 DayDay - 기획 및 개발 | fbeogmlsla@gmail.com<br />개복치 - UI 디자인 및 개발 |
