--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
             name="keywords"
-            content="강아지 MBTI, dog mbti, mbti dog, mbti 강아지, puppy mbti, mbti로 보는 나의 강아지 유형, 비글, 비숑, 불독, 셰퍼드, 페키니즈, 리트리버, 티베탄 테리어, 웰시코기, 강아지 성격, mbti 테스트, 강아지 mbti 테스트"
+            content="강아지 MBTI, dog mbti, mbti dog, mbti 강아지, puppy mbti, mbti로 보는 나의 강아지 유형, 비글, 비숑, 불독, 셰퍼드, 페키니즈, 리트리버, 티베탄 테리어, 웰시코기, 강아지 성격, mbti 테스트, 강아지 mbti 테스트, 나는 어떤 강아지?, 나는 어떤 강아지, mbti로 보는 강아지, 멍비티아이, 내가 강아지라면"
         />
-        <title>MBTI로 보는 나의 강아지 유형</title>
+        <title>MBTI로 보는 - 나는 어떤 강아지?</title>
         <link rel="stylesheet" href="css/styles.css" />
 
     </head>
     <body>
+		<!--
 			<ins class="kakao_ad_area" style="display:none;" 
  data-ad-unit    = "DAN-HjYQ1HQlOTD8UnZc" 
  data-ad-width   = "320" 
  data-ad-height  = "50"></ins> 
 <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-		
+		-->
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -28,7 +29,7 @@
         </nav>
         <main class="index-main">
             <span>MBTI로 보는</span>
-            <h1>나의 강아지 유형</h1>
+            <h1>나는 어떤 강아지?</h1>
             <img class="index-main__dog-logo" src="./img/size.png" alt="" />
             <form action="survey.html">
                 <button class="index-main__startBtn" type="text">시작하기</button>
