--- a/survey.html
+++ b/survey.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+<!--
         <ins
             class="kakao_ad_area"
             style="display: none;"
@@ -12,8 +12,10 @@
             data-ad-height="50"
         ></ins>
         <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+-->
 
-        <title>MBTI로 보는 나의 강아지 유형</title>
+
+        <title>MBTI로 보는 - 나는 어떤 강아지?</title>
         <link rel="stylesheet" href="css/styles.css" />
         <script language="javascript">
             var M = 0;
@@ -245,7 +247,7 @@
     </head>
     <body>
         <header>
-            <h2>MBTI로 보는 나의 강아지 유형</h2>
+            <h2>MBTI로 보는 - 나는 어떤 강아지?</h2>
             <span></span>
         </header>
         <main>
@@ -286,6 +288,11 @@
                 src="//t1.daumcdn.net/kas/static/ba.min.js"
                 async
             ></script>
+			<ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-Zd2GlnV4jThRHaNU" 
+ data-ad-width   = "300" 
+ data-ad-height  = "250"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
         </main>
     </body>
 </html>
