--- a/result.html
+++ b/result.html
@@ -10,7 +10,7 @@
  data-ad-height  = "50"></ins> 
 <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 		
-        <title>MBTI로 보는 나의 강아지 유형</title>
+        <title>MBTI로 보는 - 나는 어떤 강아지?</title>
         <link rel="stylesheet" href="css/styles.css" />
         <script src="https://kit.fontawesome.com/3c26041fb8.js" crossorigin="anonymous"></script>
         <!-- Go to www.addthis.com/dashboard to customize your tools -->
@@ -35,7 +35,7 @@
             </ul>
         </nav>
         <header>
-            <h2>MBTI로 보는 나의 강아지 유형</h2>
+            <h2>MBTI로 보는 - 나는 어떤 강아지?</h2>
             <span></span>
         </header>
 
