--- a/survey.html
+++ b/survey.html
@@ -15,7 +15,7 @@
 -->
 
 
-        <title>MBTI로 보는 - 나는 어떤 강아지?</title>
+        <title>Test로 보는 - 나는 어떤 강아지?</title>
         <link rel="stylesheet" href="css/styles.css" />
         <script language="javascript">
             var M = 0;
@@ -247,7 +247,7 @@
     </head>
     <body>
         <header>
-            <h2>MBTI로 보는 - 나는 어떤 강아지?</h2>
+            <h2>Test로 보는 - 나는 어떤 강아지?</h2>
             <span></span>
         </header>
         <main>
