--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="blog.html">MBTI 강아지 테스트 소개</a></li>
+                    <li><a href="blog.html">강아지 테스트 소개</a></li>
                     <li><a href="blog/1.html">SULLEN 홍보</a></li>
                     <li><a href="blog/2.html">MBTI에 관하여</a></li>
                     <li><a href="blog/3.html">MBTI와 강아지 성격</a></li>
